[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SupportBridge"
version = "0.1.0"
description = "Любой пользователь может написать в бота — его сообщение мгновенно пересылается в указанный чат поддержки или конкретному администратору. Ответ из чата автоматически возвращается пользователю, создавая ощущение личного диалога."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "RovPath" }]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/RovPath/Support_Bridge"
Repository = "https://github.com/RovPath/Support_Bridge"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

# ================ Настройки Black ================
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

# ================ Настройки Ruff ================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
   ".ruff_cache",
]

# Выбор правил (lint)
[tool.ruff.lint]
# Включаем популярный пресет — аналог flake8 + isort + pyupgrade и др.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # flake8-print (debug prints)
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (black сам форматирует длину)
]

# Настройки isort (встроено в Ruff)
[tool.ruff.lint.isort]
known-first-party = ["bot"]
combine-as-imports = true
force-sort-within-sections = true